2007-07-10 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: fixed #1751299: subversion link broken

2007-06-18 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: link to the Sandeep's article moved to the end of
	  Documentation

2007-06-12 Borut Razem <borut.razem AT siol.net>

	* index.php, snap_header.php, left_menu.inc:
	  use new svn URL scheme
	* left_menu.inc: SDCC Wiki moved to
	  http://sdcc.wiki.sourceforge.net/

2007-06-01 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 release
	* previous.php: previous news moved from index.php

2007-05-26 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 RC3

2007-05-22 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 RC2, availability of
	  "Anatomy of a Compiler A Retargetable ANSI-C Compiler"

2007-05-21 Borut Razem <borut.razem AT siol.net>

	* index.php: fixed ASXXXX typo
	* left_menu.inc: added link to the Sandeep's article

2007-05-10 Borut Razem <borut.razem AT siol.net>

	* index.php, previous.php: sdcc 2.7.0 RC1 announced, nodes old news to
	  previous.php

2007-04-08 Borut Razem <borut.razem AT siol.net>

	* index.php: replaced "freeware" with "Free Open Source Software",
	  announce "officially supported" platforms, ...
	* links.php: removed unreachable pages

2007-03-31 Borut Razem <borut.razem AT siol.net>

	* cygwin_help.html, flatmode.txt, sdcc-install-nt.html, sdcc.gif,
	  sdcctarbin.html: added

2007-03-28 Borut Razem <borut.razem AT siol.net>

	* index.php, snap_header.php:
	  "Nightly Snapshots" replaced with "Snapshot Builds", since the SDCC
	  is developed, built and used worldwide, and the word "night" doesn't
	  make any sense.

2007-03-26 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: added link to Ohloh

2007-01-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added link for webdoc 1445872,
	  updated www.soudez.be with unfound product
